--- a/QuanLyNhaHang/app/src/main/res/layout-land/fragment_phuc_vu.xml
+++ b/QuanLyNhaHang/app/src/main/res/layout-land/fragment_phuc_vu.xml
@@ -16,7 +16,7 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_marginRight="8dp"
+            android:layout_marginRight="5dp"
             android:layout_weight="2.9"
             android:background="@color/colorBackgroudSesion"
             android:orientation="vertical"
@@ -114,7 +114,6 @@
             android:layout_height="match_parent"
             android:layout_weight="3"
             android:background="@color/colorBackgroudSesion"
-            android:gravity="center_horizontal"
             android:orientation="vertical"
             android:padding="5dp">
 
@@ -170,107 +169,12 @@
                     android:textStyle="bold" />
             </TableRow>
 
-            <Button
-                android:id="@+id/btn_dat_ban"
-                android:layout_width="136dp"
-                android:layout_height="52dp"
-                android:layout_marginTop="32dp"
-                android:drawableLeft="@drawable/ic_dat_truoc"
-                android:text="@string/dat_ban"
-                android:textAllCaps="false"
-                android:textColor="@color/colorTextThongTinBan"
-                android:textSize="14sp"
+            <include layout="@layout/layout_dat_ban" />
+
+            <include
+                layout="@layout/layout_ban_phuc_vu"
                 android:visibility="gone" />
 
-            <LinearLayout
-                android:id="@+id/ln_thong_tin_ban"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:orientation="vertical"
-                android:paddingTop="5dp">
-
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:paddingBottom="5dp">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/gio_den"
-                        android:textColor="@color/colorTextThongTinBan"
-                        android:textSize="12sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/tv_gio_den"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:paddingLeft="16dp"
-                        android:text="25/11/2016 06:00 PM"
-                        android:textColor="@color/colorTextInfo"
-                        android:textSize="11sp"
-                        android:textStyle="bold" />
-                </TableRow>
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/list_thuc_don_order"
-                    android:layout_width="match_parent"
-                    android:layout_height="100dp"
-                    android:background="@drawable/bg_list"
-                    android:scrollbars="vertical" />
-
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_vertical">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/tong_tien"
-                        android:textColor="@color/colorTextThongTinBan"
-                        android:textSize="12sp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/tv_tong_tien"
-                        android:layout_width="97dp"
-                        android:layout_height="wrap_content"
-                        android:paddingLeft="32dp"
-                        android:text="150K"
-                        android:textColor="@color/colorTextTongTien"
-                        android:textSize="18sp"
-                        android:textStyle="bold" />
-
-                    <Button
-                        android:id="@+id/btn_sale"
-                        android:layout_width="36dp"
-                        android:layout_height="36dp"
-                        android:background="@drawable/ic_sale"
-                        android:gravity="center"
-                        android:text="@string/sale"
-                        android:textColor="@color/colorTextButton"
-                        android:textSize="11sp"
-                        android:textStyle="bold" />
-                </TableRow>
-
-                <Button
-                    android:id="@+id/btn_tinh_tien"
-                    android:layout_width="136dp"
-                    android:layout_height="52dp"
-                    android:layout_marginTop="16dp"
-                    android:background="#e4dde1"
-                    android:drawableLeft="@drawable/ic_pay"
-                    android:gravity="start|center_vertical"
-                    android:paddingLeft="0dp"
-                    android:text="@string/tinh_tien"
-                    android:textAllCaps="false"
-                    android:textColor="@color/colorTextThongTinBan"
-                    android:textSize="14sp" />
-            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
 
