--- a/QuanLyNhaHang/app/src/main/res/layout-land/dialog_delete_thuc_don_order.xml
+++ b/QuanLyNhaHang/app/src/main/res/layout-land/dialog_delete_thuc_don_order.xml
@@ -21,7 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="Xóa món: Chanh muối không đường ?"
+        android:text="Hủy món: Chanh muối không đường ?"
         android:textColor="@color/colorTextTenMon"
         android:textSize="14sp"
         android:textStyle="bold" />
