--- a/QuanLyNhaHang/app/src/main/res/layout-land/fragment_phuc_vu.xml
+++ b/QuanLyNhaHang/app/src/main/res/layout-land/fragment_phuc_vu.xml
@@ -166,13 +166,16 @@
                     android:text="@string/trong"
                     android:textColor="@color/colorTextInfo"
                     android:textSize="12sp"
-                    android:textStyle="bold" />
+                    android:textStyle="normal" />
             </TableRow>
 
-            <include layout="@layout/layout_thong_tin_dat_ban"/>
+            <include
+                layout="@layout/layout_thong_tin_dat_ban"
+                android:visibility="gone" />
 
-            <include android:visibility="gone"
-                layout="@layout/layout_dat_ban" />
+            <include
+                layout="@layout/layout_dat_ban"
+                android:visibility="visible" />
 
             <include
                 layout="@layout/layout_ban_phuc_vu"
