--- a/QuanLyNhaHang/app/src/main/res/layout/dialog_error.xml
+++ b/QuanLyNhaHang/app/src/main/res/layout/dialog_error.xml
@@ -7,43 +7,22 @@
     android:padding="16dp">
 
     <TextView
-        android:id="@+id/tv_ten_ban"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Bàn 12"
+        android:text="@string/error"
         android:textColor="@color/colorTextNameBan"
         android:textSize="18sp"
         android:textStyle="bold" />
 
-    <TableRow
-        android:paddingTop="16dp"
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/tv_sale"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Giảm giá:"
-            android:textColor="@color/colorTextTenMon"
-            android:textSize="14sp"
-            android:paddingRight="16dp"
-            android:textStyle="bold" />
-
-        <EditText
-            android:id="@+id/edt_sale"
-            android:textSize="12sp"
-            android:lines="1"
-            android:maxLength="3"
-            android:inputType="number"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:hint="Nhập phần trăm giảm giá" />
-
-    </TableRow>
-
+        android:text="@string/gap_loi"
+        android:gravity="center"
+        android:paddingTop="16dp"
+        android:textColor="@color/colorTextThongTinBan"
+        android:textSize="14sp"
+        android:textStyle="bold" />
 
     <TableRow
         android:layout_width="match_parent"
@@ -56,18 +35,7 @@
             android:layout_height="32dp"
             android:layout_weight="1"
             android:background="@drawable/btn_radius"
-            android:text="Đồng ý"
-            android:textAllCaps="false"
-            android:textColor="@color/colorTextButton" />
-
-        <Button
-            android:id="@+id/btn_cancle"
-            android:layout_width="0dp"
-            android:layout_height="32dp"
-            android:layout_marginLeft="16dp"
-            android:layout_weight="1"
-            android:background="@drawable/btn_radius"
-            android:text="Hủy"
+            android:text="@string/tai_lai"
             android:textAllCaps="false"
             android:textColor="@color/colorTextButton" />
     </TableRow>
