--- a/KhachHang/app/src/main/res/layout/dialog_notifi.xml
+++ b/KhachHang/app/src/main/res/layout/dialog_notifi.xml
@@ -15,6 +15,7 @@
         android:textStyle="bold" />
 
     <TextView
+        android:id="@+id/tv_notifi"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/other_people_login"
