--- a/KhachHang/app/src/main/res/drawable/btn_radius.xml
+++ b/KhachHang/app/src/main/res/drawable/btn_radius.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#ac6218"/>
+    <solid android:color="#67d440"/>
     <corners android:radius="10dp"/>
 </shape>
