--- a/KhachHang/app/src/main/res/layout/fragment_thuc_don.xml
+++ b/KhachHang/app/src/main/res/layout/fragment_thuc_don.xml
@@ -13,11 +13,21 @@
         android:orientation="vertical"
         android:padding="16dp">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/dang_nhap"
+            android:textAllCaps="true"
+            android:textColor="@color/colorTextRegister"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
         <EditText
             android:id="@+id/edt_username"
+            android:layout_marginTop="32dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:drawableLeft="@drawable/ic_name"
+            android:drawableLeft="@drawable/ic_user"
             android:drawablePadding="8dp"
             android:hint="@string/tai_khoan"
             android:maxLength="20"
@@ -64,6 +74,16 @@
             android:text="@string/dang_nhap"
             android:textStyle="bold" />
 
+        <TextView
+            android:id="@+id/tv_register"
+            android:textStyle="italic"
+            android:layout_marginTop="16dp"
+            android:textSize="14sp"
+            android:textColor="@color/colorTextRegister"
+            android:text="@string/dang_ky_tai_khoan"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
     </LinearLayout>
 
     <LinearLayout
@@ -74,10 +94,8 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <Button
-            style="?android:textAppearanceSmall"
-            android:text="logout"
-            android:id="@+id/btn_logout"
+        <TextView
+            android:text="@string/app_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
