--- a/KhachHang/app/src/main/res/values/styles.xml
+++ b/KhachHang/app/src/main/res/values/styles.xml
@@ -7,6 +7,9 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="windowActionBar">false</item>
+        <item name="android:screenOrientation">portrait</item>
+        <item name="android:windowFullscreen">true</item>
+
     </style>
 
     <style name="AppTheme.NoActionBar">
