--- a/QuanLyNhaHang/app/src/main/res/values/styles.xml
+++ b/QuanLyNhaHang/app/src/main/res/values/styles.xml
@@ -9,6 +9,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:screenOrientation">landscape</item>
     </style>
 
 </resources>
