--- a/KhachHang/app/src/main/res/layout/activity_feedback.xml
+++ b/KhachHang/app/src/main/res/layout/activity_feedback.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp"
-    tools:context="com.thanggun99.khachhang.activity.FeedbackActivity">
+    tools:context=".view.activity.FeedbackActivity">
 
     <ImageButton
         android:id="@+id/btn_back"
