--- a/KhachHang/app/src/main/res/layout/activity_main.xml
+++ b/KhachHang/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.thanggun99.khachhang.activity.MainActivity"
+    tools:context=".view.activity.MainActivity"
     tools:openDrawer="start">
 
     <include
