--- a/KhachHang/app/src/main/res/layout/fragment_tin_tuc.xml
+++ b/KhachHang/app/src/main/res/layout/fragment_tin_tuc.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    tools:context="com.thanggun99.khachhang.fragment.TinTucFragment">
+    tools:context=".view.fragment.TinTucFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
