--- a/KhachHang/app/src/main/res/layout/fragment_dat_ban.xml
+++ b/KhachHang/app/src/main/res/layout/fragment_dat_ban.xml
@@ -2,12 +2,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".phucVuView.fragment.SettingFragment">
+    tools:context="com.thanggun99.khachhang.view.fragment.DatBanFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="setting" />
+        android:text="@string/dat_ban" />
 
 </FrameLayout>
