--- a/QuanLyNhaHang/app/src/main/res/layout-land/activity_login.xml
+++ b/QuanLyNhaHang/app/src/main/res/layout-land/activity_login.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".view.activity.LoginActivity">
+    tools:context=".phucVuView.activity.LoginActivity">
 
     <!-- Login progress -->
     <ProgressBar
