--- a/QuanLyNhaHang/app/src/main/res/layout-land/fragment_home.xml
+++ b/QuanLyNhaHang/app/src/main/res/layout-land/fragment_home.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/home_background"
-    tools:context=".view.fragment.HomeFragment">
+    tools:context=".phucVuView.fragment.HomeFragment">
 
 
 
